--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="search_text">搜索</string>
     <string name="home_text">首页</string>
+    <string name="log_text">日记</string>
 </resources>
