--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="search_text">搜索</string>
     <string name="home_text">首页</string>
     <string name="log_text">日记</string>
+    <string name="sign_up_text">每日签到</string>
+    <string name="sign_up_success">签到成功</string>
 </resources>
