--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="log_text">日记</string>
     <string name="sign_up_text">每日签到</string>
     <string name="sign_up_success">签到成功</string>
+    <string name="national_code">全国注册备案号：%1$s</string>
 </resources>
